--- a/gem-puzzle/src/style.css
+++ b/gem-puzzle/src/style.css
@@ -4,5 +4,53 @@
   top: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1; 
+  z-index: 1;
+  min-width: 400px;
+}
+
+.display {
+  width: 100%;
+  position: absolute;
+  top: 15px;
+  display: flex;
+  column-gap: 20px;
+  row-gap: 15px;
+  justify-content: center;
+}
+
+.counter, .timer {
+  width: 100px;
+  height: 30px; 
+  border-radius: 0;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+}
+
+.canvas {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.controls {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  column-gap: 5px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 15px;
+}
+
+.button {
+  width: 100px;
+  height: 30px; 
+  border-radius: 0;
+  border: 1px solid black;
+  background: none;
+  cursor: pointer;
+  font-family: sans-serif;
 }
