feat: implement Tile Matrix

--- a/gem-puzzle/src/style.css
+++ b/gem-puzzle/src/style.css
@@ -25,7 +25,6 @@
   margin: 0;
   width: min(17vh, 17vw);
   height: min(3.7vh, 3.7vw);
-  max-width: 200px;
   border: min(1vh, 1vw) solid #DBE5E4;
   border-radius: min(.5vh, .5vw);
   display: flex;
@@ -47,7 +46,7 @@
 
 .controls {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   column-gap: 5px;
   position: absolute;
   left: 50%;
@@ -60,7 +59,7 @@
   padding: 0;
   margin: 0;
   width: min(15vh, 15vw);
-  height: min(4.5vh, 4.5vw); 
+  height: min(4.5vh, 4.5vw);
   border: min(0.2vh, 0.2vw) solid rgba(0,0,0,.3);
   border-radius: min(.5vh, .5vw);
   background: linear-gradient(45deg, #423E3B, #726B65);
@@ -93,4 +92,19 @@
 .button.play:hover {
   background: linear-gradient(45deg, #FA4107, #EE7F0C);
   box-shadow: inset 1px 0px 2px 1px #EC9A60;
+}
+
+.button.matrix {
+  opacity: .9;
+  width: min(7vh, 7vw);
+  background: linear-gradient(45deg, #2456B8, #345AA1);
+  box-shadow: inset 1px 0px 2px 1px #547FD2;
+}
+
+.button.matrix:hover {
+  opacity: 1;
+}
+
+.button.matrix:active {
+  opacity: .8;
 }
