fix mobile 100vh

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - calc(100vh - 100%));
   z-index: 1;
   max-width: 2800px;
   max-height: 2800px;
